--- a/STA380Exercises_Ofunrein_Pflum_Robinson_Vincent.Rmd
+++ b/STA380Exercises_Ofunrein_Pflum_Robinson_Vincent.Rmd
@@ -10,8 +10,9 @@ editor_options:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE,fig.width=5, fig.height=2.5)
 ```
-# Question 1 DONE
+# Question 1 FIX
 ```{r,include=FALSE}
+library(magrittr)
 # get rid of scientific notation
 options(scipen=999)
 
@@ -28,10 +29,10 @@ nonGreenBuildings <- greenData %>% filter(green_rating == 0)
 # 15 stories so filter on buildings between 10-20 stories
 # Austin, TX so filter on buildings with num cooling days > median of 966
 
-subset_All <- greenData %>% filter(amenities==1,
-                                   cd_total_07>=966,
-                                   stories<=20,
-                                   stories>=10,
+subset_All <- greenData %>% filter(amenities==1&
+                                   cd_total_07>=966&
+                                   stories<=20&
+                                   stories>=10&
                                    age<=10 | renovated==1)
 
 subset_Green <- subset_All %>% filter(green_rating==1)
@@ -527,10 +528,165 @@ ggmap(map) + geom_point(data=depatureDealysPerAirport, aes(x=longitude, y=latitu
 
 # Question 3
 Our group chose to construct a simple portfolio of three ETFs: iShares Core U.S. Aggregate Bond ETF (AGG), SPDR Gold Shares (GLD), Vanguard Growth Index Fund ETF Shares (VUG). We chose AGG because it is considered a relatively safe investment and would help mitigate the volatility of VUG. Additionally, we selected GLD, an ETF which tracks the price of Gold (~1/10) as Gold has been a hot commodity in the wake of COVID-19 and the expected rise in inflation rates. Figure 1 depicts the Cumulative Return, Daily Return, and Drawdown of each of the assets.
+```{r, include=FALSE}
+#rm(list=ls())
+
+############ Setup ############ 
+#### Libraries ####
+library(quantmod)
+library(timeSeries)
+library(fPortfolio)
+library(PerformanceAnalytics)
+library(ggplot2)
+library(PerformanceAnalytics)
+
+
+# Bootstrapping
+library(mosaic)
+
+# Optimization
+library(PortfolioAnalytics)
+library(DEoptim)
+library(ROI)
+require(ROI.plugin.glpk)
+require(ROI.plugin.quadprog)
+
+#### Get Returns ####
+# Portfolio
+tickers <- c("AGG", "GLD", "VUG")
+
+# Get AdjClose prices
+adjClosePrices <- NULL
+for (ticker in tickers){
+  adjClosePrices <- cbind(adjClosePrices,
+                          quantmod::getSymbols(ticker, from="2015-08-01", to = '2020-08-01', verbose=FALSE, auto.assign=FALSE)[,6])
+}
+
+# keep only the dates that have closing prices for all tickers
+adjClosePrices <- adjClosePrices[apply(adjClosePrices,1,function(x) all(!is.na(x))),]
+
+# Convert AdjClose to Returns
+returns <- Return.calculate(adjClosePrices)[-1,1:length(tickers)]
+
+############ Construct Portfolios ############ 
+#### Portfolio 1 ####
+port1_weights <- c(0.8, 0.15, 0.05)
+
+# Create portfoli (Rebalancing Daily) 
+port1_returns <- Return.portfolio(returns, weights = port1_weights, rebalance_on = "days")
+
+#### Portfolio 2 ####
+port2_weights <- c(0.1, 0.2, 0.7)
+
+# Create portfoli (Rebalancing Daily) 
+port2_returns <- Return.portfolio(returns, weights = port2_weights, rebalance_on = "days")
+
+#### Portfolio 3 ####
+portfolioAssets <- colnames(returns)
+init <- portfolio.spec(assets=portfolioAssets)
+# Add Constraint (Weights sum to 1, ie full investment)
+init <- add.constraint(portfolio=init,
+                       type="weight_sum",
+                       min_sum=1,
+                       max_sum=1)
+
+# Add Constraint (No shorting or borrowing, and no over/under investment)
+init <- add.constraint(portfolio=init,
+                       type="box",
+                       min=0.05,
+                       max=0.5
+)
+
+# Add Constraint (Target Return = 10% annual, 0.00055% daily)
+init <- add.constraint(portfolio=init, type="return", return_target=0.00055)
+
+# Add Objective (Minimize risk)
+minvar <- add.objective(portfolio=init,
+                        type='risk',
+                        name='var'
+)
+
+# Optimize Portfolio
+opt_maxret <- optimize.portfolio(R=returns, portfolio=minvar,
+                                 optimize_method="ROI",
+                                 trace=FALSE
+)
+
+# Create portfoli (Rebalancing Daily) 
+port3_returns <- Return.portfolio(returns, weights = opt_maxret$weights, rebalance_on = "days")
+
+
+#### Bench Mark Portfolio ####
+tickers <- c("SPY")
+
+# Get AdjClose prices
+adjClosePrices <- NULL
+for (ticker in tickers){
+  adjClosePrices <- cbind(adjClosePrices,
+                          quantmod::getSymbols(ticker, from="2015-08-01", to = '2020-08-01', verbose=FALSE, auto.assign=FALSE)[,6])
+}
+
+# keep only the dates that have closing prices for all tickers
+adjClosePrices <- adjClosePrices[apply(adjClosePrices,1,function(x) all(!is.na(x))),]
+
+# Convert AdjClose to Returns
+#returns <- as.timeSeries((tail(adjClosePrices,-1) / as.numeric(head(adjClosePrices,-1)))-1)
+market_returns <- Return.calculate(adjClosePrices)[-1,]
+```
+```{r}
+charts.PerformanceSummary(returns,main='Portfolio Assets Summary', rf=.0071)
+```
+The top chart unsurprisingly shows that VUG has the highest cumulative return over the past five years (as it is the most risky investment of the three) and AGG as the lowest. However, it is also apparent that GLD has high returns in the past 6 months and nears the cumulative return of VUG. The bottom graph depicts the drawdown for every asset during each period. The drawdown of an asset refers to how much an investment or trading account is down from the peak before it recovers back to the peak. Therefore, it is generally a good measure of the negative risk of an asset.
+```{r}
+chart.RiskReturnScatter(returns, add.sharpe = TRUE, Rf=.0071)
+```
+Figure 1 does not do the best job of displaying the return of an asset in respect to the risk taken on. Therefore, Figure 2 plots the annualized return for every asset vs annualized risk (SD). You can see that VUG has the highest risk of all three assets but the also the highest return. One last graph that is useful to examine is each of the assets relative performance to the market. To simplify things, we used SPY, and ETF that track the S&P500, as our market proxy. Figure 3 shows each of the assets performance relative to SPY. If SPY were graphed, it would be a horizontal line intersection the y-axis at 1. Therefore, whenever an asset is above 1, they are performing better than the market.
+```{r}
+chart.RelativePerformance(apply.weekly(returns, Return.cumulative), apply.weekly(market_returns, Return.cumulative), legend.loc='topright')
+
+```
+We can see that VUG has consistently been beating the market while the less risky assets GLD and AGG have not, although GLD has made a recent push above the market.
+
+These three figures confirm our initial thoughts of the risk-reward ratio of each of the assets and why we chose them to comprise our portfolio. However, we then needed to decide how much to invest in each of the assets in our portfolio. 
+
+We decided for our first portfolio, Portfolio 1, we would create a very safe portfolio to satisfy a client who was risk-averse. Therefore, we invested heavily in AGG (0.8), lightly in GLD (0.15) and almost nothing in VUG (0.05). 
+
+For our second portfolio we decided to invest risky, perhaps for a young client with a lot of new wealth and in the position to take on financial risk. For this portfolio, Portfolio 2, we invested heavily in VUG (0.7), moderately in GLD (0.2) and lightly in AGG (0.1). 
+
+Lastly, we constructed our third portfolio by optimizing our portfolio (in respect to Variance)  subject to a set of constraints:
+Full Investment: $\sum_{i} w_i =1, \forall$portfolios
+No Over/Under Investment: $0.05 \leq w_i \leq0.05 \forall$portfolios
+Target Return (~10% annual): $w' \bar\mu = 0.00055$
+Our objective was to minimize the variance of the portfolio given the constraints listed above. This resulted in a portfolio with:
+$w_{AGG}$=0.0659
+$w_{GLD}$=0.500
+$w_{VUG}$=0.4341
+A summary of our portfolio weights can be seen in Table 1.
+
+$$\begin{array}{cccc}
+\boldsymbol{Portfolio} & \boldsymbol{Weight(AGG)} & \boldsymbol{Weight(GLD)}& \boldsymbol{Weight(VUG)}\\
+Portfolio 1 & 0.8 & 0.15 & 0.05\\
+Portfolio 2 & 0.1 & 0.2 & 0.7\\
+Portfolio 3 & 0.0659 & 0.5 & 0.4341\\
+
+\end{array}$$
+The portfolios constructed above yielded the following numbers (monthly) (Table2):
+
+$$\begin{array}{cccc}
+\boldsymbol{Portfolio} & \boldsymbol{Return (Percent)} & \boldsymbol{Risk (Percent)}& \boldsymbol{Sharpe Ratio} & \boldsymbol{VaR (Percent)}\\
+Portfolio 1 & 0.49 & 1.38 & 0.356 & -1.696 \\
+Portfolio 2 & 1.78 & 4.05 & 0.289 & -5.55\\
+Portfolio 3 & 1.11 & 3.08 & 0.356 & -4.033\\
+
+\end{array}$$
+
+The table does a nice job of summarizing the portfolios. Portfolio 1, which is the safest of the three, has the lowest return and the lowest VaR. However, although Portfolio 2 has a higher return than portfolio 3, it has a much higher risk and VaR than Portfolio 3 and therefore a considerably lower Sharpe Ratio. Because Portfolio 3 was optimized, it had a much better relative performance than Portfolio 2.
+
 
 ```{r}
 
 ```
+
 # Question 4
 ```{r}
 
@@ -540,6 +696,7 @@ Our group chose to construct a simple portfolio of three ETFs: iShares Core U.S.
 
 ```
 # Question 6
+
 ```{r}
 
 ```
